remove plugin lombok, Fix getters Setters and
fix Run-configuration (VM-args)